# cr-ranker

./: .gitignore  CMakeLists.txt  README.md  alunos.txt  candidatos.csv  estudantes.csv  resultado_matricula.txt  run_linux.sh  run_windows.bat
include/: Aluno.h  BST.h  Hashtable.h  Queue.h  README.md  Student.h  Subject.h  System.h  Turma.h
libs/: README.md
src/: Queue.cpp  README.md  main.cpp
src/bst/: BST.cpp
src/hashtable/: Hashtable.cpp
src/queue/: Queue.cpp
src/system/: System.cpp
